--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/css/main.css">
     <title>DICT-ILCDB</title>
 </head>
 
 <body>
-    Before
-    <br>
-    <%- body %>
-        <br>
-        After
+    <%- include('../partials/header.ejs') %>
+        <%- body %>
 </body>
+<script src="scripts/toggle.js"></script>
 
 </html>
